# neupan_ws

./: .gitignore  README.md
libneupan_uav/: CMakeLists.txt  package.xml
libneupan_uav/include/neupan_uav/: config.hpp  dune.hpp  farfield_guide.hpp  nrmp.hpp  obstacle_preselector.hpp  pan.hpp  planner.hpp  planner_result.hpp  rknn_runner.hpp  robot_model.hpp  types.hpp
libneupan_uav/src/: config.cpp  dune.cpp  farfield_guide.cpp  nrmp.cpp  obstacle_preselector.cpp  pan.cpp  planner.cpp  rknn_runner.cpp  robot_model.cpp
libneupan_uav/src/detail/: box_geometry.hpp
libneupan_uav/tests/: test_config.cpp  test_dune_postprocess.cpp  test_farfield_guide.cpp  test_nrmp.cpp  test_obstacle_preselector.cpp  test_replay.cpp  test_rknn_runner.cpp  test_robot_model.cpp  test_warm_start.cpp
libneupan_uav/tests/data/: dune_postprocess_parity_fixture.txt  phase6_5_replay_fixture.json  phase7_5_farfield_replay_fixture.json
libneupan_uav/tests/tools/: dump_rknn_raw_mu.cpp  generate_dune_postprocess_fixture.py  run_phase6_5_cpp_replay.cpp
neupan_ros/: CMakeLists.txt  package.xml
neupan_ros/config/: planner.yaml  robot.yaml
neupan_ros/include/neupan_ros/: adapters.hpp  config_loader.hpp  px4_control.hpp  px4_control_logic.hpp  uav_node.hpp
neupan_ros/launch/: bringup_cpp.launch.py
neupan_ros/models/uav_robot_default/: obs_point_net_T25_N160_fp.rknn.metadata.json
neupan_ros/rviz/: neupan_observe.rviz
neupan_ros/src/: adapters.cpp  config_loader.cpp  internal_interfaces.hpp  px4_control.cpp  px4_control_logic.cpp  uav_node.cpp
neupan_ros/src/neupan_ros/: px4_control.hpp  uav_node.hpp
neupan_ros/test/: planner_smoke.yaml  test_adapters.cpp  test_bringup_launch.py  test_config_loader.cpp  test_px4_control_logic.cpp  test_px4_control_topics.cpp  test_uav_node_smoke.cpp
