<?xml version="1.0"?>
<package format="3">
  <name>neupan_ros</name>
  <version>0.1.0</version>
  <description>C++ ROS2/PX4 wrapper for the NeuPAN UAV planner core.</description>

  <maintainer email="patience@example.com">NeuPAN User</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>libneupan_uav</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
